# Edit3D

./: .gitignore  CMakeLists.txt  README.md
src/: PCH.h  main.cpp  test.cpp
src/Application/: Application.cpp  Application.h
src/Commands/: CommandParser.cpp  CommandParser.h
src/Console/: Console.cpp  Console.h
src/Math/: ImVec3.h  Matrix.cpp  Matrix.h
src/Objects/: Box.cpp  Box.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Line.cpp  Line.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h
src/Rendering/: Render.cpp  Render.h
src/Scene/: Scene.cpp  Scene.h
tests/: malual_testss.md
tests/test_files/: scene_full.txt
